adding config reset